fixed row gap in home page

--- a/src/styles/pages/home-page.css
+++ b/src/styles/pages/home-page.css
@@ -49,6 +49,12 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
+
+  @media screen and (max-width: 624px){
+  .best-creators__users {
+    row-gap: 15px;
+    }
+  }
   
   .best-creators__header{
     display: flex;
